# pyIBLM

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  README.md  _margin-header.html  _quarto.yml  index.qmd  load_freMTPL2freq.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml  jekyll-gh-pages.yml
articles/: IBLM.qmd
examples/: demo.py
src/iblm/: __init__.py  _data.py  _explain.py  _model.py  _plots.py  _scoring.py  _shap.py  _theme.py  _utils.py
src/iblm/data/: freMTPLmini.csv
tests/: conftest.py  test_anchored.py  test_check_data.py  test_explain_iblm.py  test_offset_features.py  test_predict.py  test_weight_features.py
