[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyiblm"
dynamic = ["version"]
description = "Interpretable Boosted Linear Models: GLM + XGBoost ensemble with SHAP-based interpretability"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Paul Beard",     email = "paul.beard.actuarial@gmail.com" },
    { name = "Karol Gawlowski", email = "kg.actuarial@gmail.com" },
]
maintainers = [
    { name = "Paul Beard", email = "paul.beard.actuarial@gmail.com" },
]
keywords = ["glm", "xgboost", "shap", "interpretable", "boosting", "insurance", "actuarial"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "statsmodels>=0.14",
    "xgboost>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scipy>=1.11",
]

[project.optional-dependencies]
data = [
    # Required only for load_freMTPL2freq() – downloads and parses an .rda file
    "rdata>=0.10",
]
dev = [
    "pytest>=7.0",
    "ipykernel",
]

[project.urls]
Homepage = "https://ifoa-adswp.github.io/pyIBLM/"
Repository = "https://github.com/IFoA-ADSWP/pyIBLM"
"Bug Tracker" = "https://github.com/IFoA-ADSWP/pyIBLM/issues"
Documentation = "https://ifoa-adswp.github.io/pyIBLM/"

[tool.hatch.version]
path = "src/iblm/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/iblm"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/iblm/data/freMTPLmini.csv",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (require large dataset download; deselect with '-m not slow')",
]
